fix(welcome-page): use inline-block for alignment

--- a/css/_welcome_page.scss
+++ b/css/_welcome_page.scss
@@ -175,10 +175,11 @@
 
 .feature_holder
 {
-    float:left;
+    display: inline-block;
     width: 169px;
     padding-left: 75px;
     padding-bottom: 30px;
+    vertical-align: top;
 }
 
 .feature_icon
